--- a/src/HAX502X_Calcul-differentiel/tds/td_1.tex
+++ b/src/HAX502X_Calcul-differentiel/tds/td_1.tex
@@ -11,7 +11,7 @@
 \end{td-exo}
 
 \iftoggle{showsolutions}{
-		\begin{nntd-sol}[] % 1
+		\begin{td-sol}[] % 1
 			On reconnait une équation différentielle linéaire d'ordre 1 de la forme
 			\begin{equation*}
 				y'(x)+a(x)y(x)=b(x)
@@ -64,7 +64,7 @@
 			\begin{equation*}
 				v(t)= v_h(t) + v_p(t) = \lambda e^{-{\frac Rm t}} + \frac FR
 			\end{equation*}
-		\end{nntd-sol}
+		\end{td-sol}
 }{}
 
 \begin{td-exo}[] % 2
@@ -78,7 +78,7 @@
 \end{td-exo}
 
 \iftoggle{showsolutions}{
-	\begin{nntd-sol}[]\, % 1
+	\begin{td-sol}[]\, % 1
 		\begin{enumerate}
 			\item \(\triangleright\) Résolvons l'équation homogène
 			\begin{equation*}
@@ -140,7 +140,7 @@
 
 			\item 2e partie
 		\end{enumerate}
-	\end{nntd-sol}
+	\end{td-sol}
 }{}
 
 \begin{td-exo}[] % 3
@@ -190,17 +190,17 @@
 			\end{cases}
 		\end{equation}
 
-		\begin{nnremark}[]
+		\begin{remark}[]
 			Il est possible d'arriver à un système différent, ce qui n'est pas grave du
 			moment que les calculs sont corrects et que le résultat est un système découplé.
-		\end{nnremark}
+		\end{remark}
 
 		\item Trouver la solution du \(\eqref{eq:2}\) puis du \(\eqref{eq:1}\).
 	\end{enumerate}
 \end{td-exo}
 % ----- Solutions exo 4
 \iftoggle{showsolutions}{
-	\begin{nntd-sol}[]\, % 4
+	\begin{td-sol}[]\, % 4
 		\begin{enumerate}
 			\item \(\triangleright\) Les valeurs propres de la matrice \(\cal A\) sont les
 			solutions de l'équation caractéristique
@@ -362,7 +362,7 @@
 				\end{equation*}
 			\end{itemize}
 		\end{enumerate}
-	\end{nntd-sol}
+	\end{td-sol}
 }{}
 
 \begin{td-exo}[] % 5
@@ -418,7 +418,7 @@
 \end{td-exo}
 % ----- Solutions exo 8
 \iftoggle{showsolutions}{
-	\begin{nntd-sol}[]\, % 8
+	\begin{td-sol}[]\, % 8
 		\begin{itemize}
 			\item Utilisons Cauchy-Lipschitz pour résoudre 
 			l'équation différentielle.
@@ -480,7 +480,7 @@
 			une unique solution maximale
 
 		\end{itemize}
-	\end{nntd-sol}
+	\end{td-sol}
 }{}
 
 \begin{td-exo}[] % n
