--- a/src/HAX502X_Calcul-differentiel/tds/td_main.tex
+++ b/src/HAX502X_Calcul-differentiel/tds/td_main.tex
@@ -14,6 +14,7 @@
 \begin{document}
     \maketitle
     \tableofcontents
+    \newpage
 
     \section*{TD1}\label{sec:TD1}
     \addcontentsline{toc}{section}{\nameref{sec:TD1}}
