--- a/src/HAX503X_Mesure-et-Integration/tds/td_3.tex
+++ b/src/HAX503X_Mesure-et-Integration/tds/td_3.tex
@@ -19,7 +19,7 @@
 \end{td-exo}
 % ----- Solutions exo 1
 \iftoggle{showsolutions}{
-    \begin{nntd-sol}[]\,
+    \begin{td-sol}[]\,
         \begin{enumerate}
             \item FAUX en général (prendre \(f=\one_{\R_+}-\one_{\R_-}\) pour la mesure de Lebesgue).
 
@@ -27,7 +27,7 @@
 
             \item FAUX en général (prendre une fonction impaire pour la mesure de Lebesgue).
         \end{enumerate}
-    \end{nntd-sol}
+    \end{td-sol}
 }{}
 
 \begin{td-exo}[] % 2
@@ -64,7 +64,7 @@
 \end{td-exo}
 % ----- Solutions exo 2
 \iftoggle{showsolutions}{
-    \begin{nntd-sol}[]\,
+    \begin{td-sol}[]\,
         \begin{enumerate}
             \item Soit \(A_n\) une suite d'éléments de \(\scr A\). On a
             \begin{equation*}
@@ -150,7 +150,7 @@
                 \end{equation*}
             \end{enumerate}
         \end{enumerate}
-    \end{nntd-sol}
+    \end{td-sol}
 }{}
 
 \subsection*{Théorèmes limites}
@@ -176,7 +176,7 @@
 \end{td-exo}
 % ----- Solutions exo 3
 \iftoggle{showsolutions}{
-    \begin{nntd-sol}[]\,
+    \begin{td-sol}[]\,
         \begin{enumerate}
             \item On a
             \begin{equation*}
@@ -276,7 +276,7 @@
                 \lim_{n\to+\infty}\int_{A\sqcup B}f^n\der\mu = 0 + \mu(B) = \mu(B).
             \end{equation*}
         \end{enumerate}
-    \end{nntd-sol}
+    \end{td-sol}
 }{}
 
 \begin{td-exo}[] % 4
@@ -287,7 +287,7 @@
 \end{td-exo}
 % ----- Solutions exo 4
 \iftoggle{showsolutions}{
-    \begin{nntd-sol}[]\,
+    \begin{td-sol}[]\,
         On voit tout de suite que le théorème de convergence dominée convient parfaitement. Alors
         \begin{equation*}
             \n{f(x)\cos^n(\pi x)}\leq \underbrace{\n{f(x)}}_{\in\scr L^1(\R)}
@@ -304,7 +304,7 @@
         \begin{equation*}
             \lim_{n\to+\infty}\int_{\R}f(x)\cos^n(\pi x)\der\lambda_1(x)=0.
         \end{equation*}
-    \end{nntd-sol}
+    \end{td-sol}
 }{}
 
 \begin{td-exo}[] % 5
@@ -324,7 +324,7 @@
 \end{td-exo}
 % ----- Solutions exo 5
 \iftoggle{showsolutions}{
-    \begin{nntd-sol}[]\,
+    \begin{td-sol}[]\,
         \begin{enumerate}
             \item On utilise la caractérisation séquentielle de la limite
             avec \({\left(x_n\right)}_{n\in\N}\) une suite de réels strictement positifs
@@ -380,7 +380,7 @@
                 f=\sum_{n\in\N}\one_{\ff{n,n+\frac{1}{n^2}}}
             \end{equation*}
         \end{enumerate}
-    \end{nntd-sol}
+    \end{td-sol}
 }{}
 
 \begin{td-exo}[] % 6
@@ -404,7 +404,7 @@
 \end{td-exo}
 % ----- Solutions exo 6
 \iftoggle{showsolutions}{
-    \begin{nntd-sol}[]\,
+    \begin{td-sol}[]\,
         \begin{enumerate}
             \item On a
             \begin{equation*}
@@ -462,7 +462,7 @@
             On peut voir ça comme une formalisation de la convergence de \(\varphi\) sur \(\delta_0\).
             
         \end{enumerate}
-    \end{nntd-sol}
+    \end{td-sol}
 }{}
 
 \begin{td-exo}[] % 7
@@ -487,7 +487,7 @@
 \end{td-exo}
 % ----- Solutions exo 7
 \iftoggle{showsolutions}{
-    \begin{nntd-sol}[]\,
+    \begin{td-sol}[]\,
         \begin{enumerate}
             \item On remarque que la mesure est finie et donc les fonctions
             constantes sont intégrables. On a alors
@@ -584,7 +584,7 @@
                 F'(0) = \int_{\R}x^2\der\mu(x)
             \end{equation*}
         \end{enumerate}
-    \end{nntd-sol}
+    \end{td-sol}
 }{}
 
 \begin{td-exo}[] % 8
@@ -597,10 +597,10 @@
 \end{td-exo}
 
 \iftoggle{showsolutions}{
-    \begin{nntd-sol}[]\,
+    \begin{td-sol}[]\,
         Rapide à faire, on fait passer f de l'autre coté, on factorise
         et on utilise que f vaut 0 ou 1 presque partout, soit par
         image reciproque, f vaut \(\one_A\) presque partout.
-    \end{nntd-sol}
+    \end{td-sol}
 }{}
 
