--- a/src/HAX503X_Mesure-et-Integration/tds/td_4.tex
+++ b/src/HAX503X_Mesure-et-Integration/tds/td_4.tex
@@ -3,7 +3,7 @@
 \end{td-exo}
 % ----- Solutions exo 6
 \iftoggle{showsolutions}{
-    \begin{nntd-sol}[]\,
+    \begin{td-sol}[]\,
         \begin{enumerate}
             \item Rapide à faire. On veut appliquer TCD donc on vérifie les hypothèses:
             \begin{itemize}
@@ -22,7 +22,7 @@
             \end{itemize}
             On applique alors le théorème de convergence dominée pour conclure.
         \end{enumerate}
-    \end{nntd-sol}
+    \end{td-sol}
 }{}
 
 \begin{td-exo}[]
@@ -30,7 +30,7 @@
 \end{td-exo}
 % ----- Solutions exo 9
 \iftoggle{showsolutions}{
-    \begin{nntd-sol}[]\,
+    \begin{td-sol}[]\,
         % partie 1:
         % step 1: lister les outils utiles, ici croissances comparées pour
         % convergences simples
@@ -67,6 +67,6 @@
         % step 6: IPP pour montrer que l'intégrale est égale à pi^2/8
         % step 7: on separe en somme de pairs et impairs
         
-    \end{nntd-sol}
+    \end{td-sol}
 }{}
 
