--- a/src/HAX506X_Probabilites/assets/module_header.tex
+++ b/src/HAX506X_Probabilites/assets/module_header.tex
@@ -8,7 +8,12 @@
 \mytheorem{exs}{Exemples}{matrix-mist}{subsection}{o}
 
 \theoremstyle{nonum}
-\mytheorem{remark}{Remarque}{verdant}{}{}
 \mytheorem{interp}{Interprétation}{verdant}{}{}
+\mytheorem{proposition}{Proposition}{verdant}{}{}
+\mytheorem{example}{Exemple}{matrix-mist}{}{}
+\mytheorem{theorem}{Théorème}{astral}{}{}
+
+\setcounter{secnumdepth}{5}
+\setcounter{tocdepth}{5}  % Show up to level 5 in TOC
 
 \makeatother
