--- a/src/HAX501X_Groupes-et-Anneaux-I/tds/td_main.tex
+++ b/src/HAX501X_Groupes-et-Anneaux-I/tds/td_main.tex
@@ -14,6 +14,7 @@
 \begin{document}
     \maketitle
     \tableofcontents
+    \newpage
 
     \section*{TD1 --- Rappels d'arithmétique des entiers}\label{sec:TD1}
     \addcontentsline{toc}{section}{\nameref{sec:TD1}}
