--- a/src/HAX506X_Probabilites/cours/chapter_main.tex
+++ b/src/HAX506X_Probabilites/cours/chapter_main.tex
@@ -13,10 +13,17 @@
 \begin{document}
     \maketitle
     \tableofcontents
+    \newpage
 
-    \section*{Chapitre 1 --- Bases de la théorie des probabilités}\label{sec:CH1}
-    \addcontentsline{toc}{section}{\nameref{sec:CH1}}
-    \setcounter{section}{1}
+    \suprasection*{Chapitre 1 --- Bases de la théorie des probabilités}\label{sec:CH1}
+    \addcontentsline{toc}{suprasection}{\nameref{sec:CH1}}
+    \setcounter{suprasection}{1}
     \input{../cours/chapter_1.tex}
+    \newpage
+
+    \suprasection*{Chapitre 2 --- Indépendance}\label{sec:CH2}
+    \addcontentsline{toc}{suprasection}{\nameref{sec:CH2}}
+    \setcounter{suprasection}{2}
+    \input{../cours/chapter_2.tex}
     \newpage
 \end{document}
