--- a/src/HAX506X_Probabilites/tds/td_main.tex
+++ b/src/HAX506X_Probabilites/tds/td_main.tex
@@ -14,6 +14,7 @@
 \begin{document}
     \maketitle
     \tableofcontents
+    \newpage
 
     \section*{TD1 --- Espaces probabilisés}\label{sec:TD1}
     \addcontentsline{toc}{section}{\nameref{sec:TD1}}
@@ -28,11 +29,16 @@
     \setcounter{tdcounter}{0}
     \input{../tds/td_2.tex}
     \newpage
-%
-    %\section*{TD3}\label{sec:TD3}
-    %\addcontentsline{toc}{section}{\nameref{sec:TD3}}
-    %\setcounter{section}{3}
-    %\setcounter{tdcounter}{0}
-    %\input{../tds/td_3.tex}
-    %\newpage
+    
+    \section*{TD3 --- Moments d'une variable aléatoire}\label{sec:TD3}
+    \addcontentsline{toc}{section}{\nameref{sec:TD3}}
+    \setcounter{section}{3}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_3.tex}
+
+    \section*{TD4 --- Fonctions associées à une variable aléatoire}\label{sec:TD4}
+    \addcontentsline{toc}{section}{\nameref{sec:TD4}}
+    \setcounter{section}{4}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_4.tex}
 \end{document}
