--- a/src/common/macros/math.tex
+++ b/src/common/macros/math.tex
@@ -18,6 +18,7 @@
 \newcommand{\Z}{\mathbb{Z}} % Integers
 \newcommand{\N}{\mathbb{N}} % Natural numbers
 \newcommand{\C}{\mathbb{C}} % Complex numbers
+\newcommand{\Q}{\mathbb{Q}} % Rational numbers
 \newcommand{\bbR}{\mathbb{R}} % Real numbers
 \newcommand{\bbZ}{\mathbb{Z}} % Integers
 \newcommand{\bbN}{\mathbb{N}} % Natural numbers
@@ -54,6 +55,7 @@
 \newcommand{\nnn}[1]{\mathopen{}\left\||#1|\right\|\mathclose{}} % Double bar norm
 \newcommand{\n}[1]{\mathopen{}\left|#1\right|\mathclose{}} % Single bar norm
 
+
 % Other operators
 \providecommand{\1}{\mathds{1}} % Identity operator
 \DeclareMathOperator{\im}{\mathsf{Im}} % Imaginary part
@@ -70,6 +72,8 @@
 \DeclareMathOperator{\rank}{\mathsf{rank}} % Rank
 \DeclareMathOperator{\tr}{\mathsf{tr}} % Trace
 \DeclareMathOperator{\id}{\mathsf{Id}} % Identity
+\DeclareMathOperator{\var}{\mathsf{Var}} % Variance
+\DeclareMathOperator{\cov}{\mathsf{Cov}} % Covariance
 \providecommand{\B}{\mathsf{B}} % Bold symbol
 
 \usepackage{dsfont}
